src/objects/loan__loan_amortize_txns__c.object
<CustomObject>
    <fields>
        <fullName>loan__Loan_Amortize_Balances__c</fullName>
        <inlineHelpText>This is the child to the loan account</inlineHelpText>
        <label>Loan Amortize Balances</label>
        <referenceTo>loan__loan_amortize_balances__c</referenceTo>
        <relationshipLabel>Amortize Transactions</relationshipLabel>
        <relationshipName>Amortize_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__lat_amount__c</fullName>
        <description>Amortized Amount</description>
        <inlineHelpText>This is the transaction amount</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__lat_gl_post_date__c</fullName>
        <description>Gl Post date</description>
        <inlineHelpText>It is the date on which the account is created.</inlineHelpText>
        <label>GL Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__lat_post_date__c</fullName>
        <description>Date of Amortized txn</description>
        <inlineHelpText>It is the date on which the account transaction is created.</inlineHelpText>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__lat_txn_code__c</fullName>
        <description>Transaction</description>
        <inlineHelpText>It is the Interest Amortization or Interest Amortization Reversal.</inlineHelpText>
        <label>Transaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Amortize Transactions</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Amortize Txn Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amortize Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>